--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
           <li class="nav-item">
 
-            <a href="#" class="nav-link"><i class="fa fa-home" aria-hidden="true"></i>
+            <a href="#sec1" class="nav-link"><i class="fa fa-home" aria-hidden="true"></i>
               <p>Home</p>
             </a>
 
@@ -179,7 +179,7 @@
 
           <li class="nav-item">
 
-            <a href="#" class="nav-link"><i class="fa fa-user" aria-hidden="true"></i>
+            <a href="#sec2" class="nav-link"><i class="fa fa-user" aria-hidden="true"></i>
               <p>About</p>
             </a>
 
@@ -187,7 +187,7 @@
 
           <li class="nav-item">
 
-            <a href="#" class="nav-link"><i class="fa fa-file" aria-hidden="true"></i>
+            <a href="#sec3" class="nav-link"><i class="fa fa-file" aria-hidden="true"></i>
               <p>Resume</p>
             </a>
 
@@ -195,7 +195,7 @@
 
           <li class="nav-item">
 
-            <a href="#" class="nav-link"><i class="fa fa-book" aria-hidden="true"></i>
+            <a href="#sec4" class="nav-link"><i class="fa fa-book" aria-hidden="true"></i>
               <p>Portfolio</p>
             </a>
 
@@ -203,7 +203,7 @@
 
           <li class="nav-item">
 
-            <a href="#" class="nav-link"><i class="fa fa-server" aria-hidden="true"></i>
+            <a href="#sec5" class="nav-link"><i class="fa fa-server" aria-hidden="true"></i>
               <p>Service</p>
             </a>
 
@@ -211,7 +211,7 @@
 
           <li class="nav-item">
 
-            <a href="#" class="nav-link"><i class="fa fa-envelope" aria-hidden="true"></i>
+            <a href="#sec6" class="nav-link"><i class="fa fa-envelope" aria-hidden="true"></i>
               <p>Contact</p>
             </a>
 
@@ -1408,7 +1408,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="row my-4 justify-content-center align-items-center">
+            <div class="row my-5 justify-content-center align-items-center">
 
               <div class="col-md-4 col-mdd">
 
@@ -1486,7 +1486,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="row my-4 justify-content-center align-items-center">
+            <div class="row my-5 justify-content-center align-items-center">
 
               <div class="col-md-4 col-mdd">
 
@@ -1564,7 +1564,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="row my-4 justify-content-center align-items-center">
+            <div class="row my-5 justify-content-center align-items-center">
 
               <div class="col-md-4 col-mdd">
 
@@ -1642,7 +1642,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="row my-4 justify-content-center align-items-center">
+            <div class="row my-5 justify-content-center align-items-center">
 
               <div class="col-md-4 col-mdd">
 
