--- a/index.html
+++ b/index.html
@@ -1792,7 +1792,7 @@
 
           <iframe class="mt-4 inframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d24194.905741139206!2d-74.006113!3d40.
             71002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center
-            !5e0!3m2!1sen!2sbg!4v1621071211832!5m2!1sen!2sbg" width="370" height="290" style="border:0;"
+            !5e0!3m2!1sen!2sbg!4v1621071211832!5m2!1sen!2sbg" width="100%" height="290" style="border:0;"
             allowfullscreen="" loading="lazy"></iframe>
 
         </div>
@@ -1809,7 +1809,7 @@
 
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-6 mt-4 mt-sm-0">
 
                 <label for="" class="mb-3">Your Email</label>
                 <input class="form-control" type="email" name="" id="" placeholder="">
