--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
         <ul class="navbar-nav">
 
-          <li class="nav-item">
+          <li class="nav-item link-whitee">
 
             <a href="#sec1" class="nav-link"><i class="fa fa-home" aria-hidden="true"></i>
               <p>Home</p>
@@ -1744,7 +1744,7 @@
 
       </div>
 
-      <div class="row pe-md-4">
+      <div class="row pe-md-4 mx-1 mx-md-0">
 
         <div class="col-md-5 mx-lg-3 py-5 p-md-4 mt-lg-0 mt-4 shadow">
 
@@ -1842,7 +1842,7 @@
 
 
   <div class="footerr">
-    <p class="foot-text-1 text-center mx-auto pt-2">© Copyright <strong>iPortfolio</strong>
+    <p class="foot-text-1 text-center mx-auto pt-3">© Copyright <strong>iPortfolio</strong>
       Designed by <span>BootstrapMade</span></p>
   </div>
 
