--- a/index.html
+++ b/index.html
@@ -1746,7 +1746,7 @@
 
       <div class="row pe-md-4 mx-1 mx-md-0">
 
-        <div class="col-md-5 mx-lg-3 py-5 p-md-4 mt-lg-0 mt-4 shadow">
+        <div class="col-md-5 mx-lg-3 py-3 py-md-5 p-md-4 mt-lg-0 shadow">
 
           <div class="col-div d-flex">
 
@@ -1796,7 +1796,7 @@
             allowfullscreen="" loading="lazy"></iframe>
 
         </div>
-        <div class="col-lg col-lgg py-5 p-md-4 mt-4 mt-lg-0 shadow">
+        <div class="col-lg col-lgg p-md-4 mt-3 py-3 py-md-5 mt-md-0 shadow">
 
           <form action="" class="form">
 
