--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
           <div class="modal-body">
 
 
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleControls" data-bs-touch="false" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="img/portfolio-1.jpg" class="d-block mx-auto img-fluid" alt="...">
